--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "json-patch": "^0.7.0",
     "mariadb": "^2.5.3",
     "pm2": "^4.5.5",
     "swagger-jsdoc": "^4.2.0",
